--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.13.51",
+    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-manifest": "^2.2.5",
+    "gatsby-plugin-offline": "^2.2.5",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.4",
+    "gatsby-plugin-sharp": "^2.2.11",
+    "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-source-wordpress": "^3.1.14",
+    "gatsby-transformer-sharp": "^2.2.6",
     "gsap": "^2.1.3",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
