--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.3.1",
     "gatsby": "^2.15.15",
     "gatsby-image": "^2.2.19",
+    "gatsby-plugin-google-analytics": "^2.1.20",
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-offline": "^3.0.6",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
