--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-detect-offline": "^2.4.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-slick": "^0.25.2",
